crucible-macros/tests/ui/fail-fixture-args.stderr
error: #[fixture] does not take arguments
 --> tests/ui/fail-fixture-args.rs:4:11
  |
4 | #[fixture(debug)]
  |           ^^^^^

error[E0425]: cannot find type `MyFixture` in this scope
 --> tests/ui/fail-fixture-args.rs:9:6
  |
9 | impl MyFixture {
  |      ^^^^^^^^^ not found in this scope
